ubiquity (2.14.4) UNRELEASED; urgency=low

  * Set LC_TIME to reflect the language rather than the location, as the
    lesser of two evils since it includes translations of day and month
    names (LP: #1160441).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 18 Apr 2013 12:44:05 +0100

ubiquity (2.14.3) raring; urgency=low

  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 16 Apr 2013 16:16:25 +0100

ubiquity (2.14.2) raring; urgency=low

  [ Dmitrijs Ledkovs ]
  * Do not select disabled partitioning options, even if they are at the
    top of the list, e.g. when offline, upgrade option is disabled and at
    the top of the list. (LP: #1152921) Make the upgrade option
    description also insensitive when disabled, to match visual style.
  * Do not allow encrypting, encrypted volumes, by filtering out crypto
    method from "use as" combo box. (LP: #1131761)

  [ Colin Watson ]
  * Don't strip qualifiers off the locale used for non-translation-like
    categories when only a single UTF-8 locale matches the selected location
    (LP: #1158750).
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu31.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 08 Apr 2013 13:31:51 +0100

ubiquity (2.14.1) raring; urgency=low

  * Pass --identifier-prefix=Ubiquity via
    UbiquityMockResolver_1_0_gir_SCANNERFLAGS rather than
    UbiquityMockResolver_1_0_gir_CFLAGS, fixing build failure with
    gobject-introspection >= 1.35.9.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 30 Mar 2013 23:15:26 +0000

ubiquity (2.14.0) raring; urgency=low

  [ Dmitrijs Ledkovs ]
  * ubiquity.ubiquity.upstart: exit with 1 if fails for unknown reasons
    (LP: #1151224)

  [ Jason Gerard DeRose ]
  * Add 'ubiquity-frontend-gtk' to the tuple of packages to remove in
    bin/oem-config-remove-gtk (LP: #1161943).

  [ Colin Watson ]
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu30, partman-base 163ubuntu2.