@@ -3,6 +3,9 @@ ubiquity (2.14.4) UNRELEASED; urgency=low
   * Set LC_TIME to reflect the language rather than the location, as the
     lesser of two evils since it includes translations of day and month
     names (LP: #1160441).
+  * Allow preseeding "ubiquity ubiquity/automatic/timezone boolean true" to
+    skip the timezone question (LP: #1097113).  This is intended to be part
+    of a more general mechanism, but not a week before release.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 18 Apr 2013 12:44:05 +0100
 
